adding highscores page and working on score logic

--- a/highscores.html
+++ b/highscores.html
@@ -6,23 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <title>CodeQuiz</title>
+  <title>Highscores - CodeQuiz</title>
 </head>
 <body>
   <header>
-    <h1>Welcome to CodeQuiz</h1>
+    <h1>Welcome to CodeQuiz - Highscores</h1>
     <div class="menubar"> 
-      <div class="highscores"> <a href="./highscores.html">Highscores</a> </div>
-      <button class="start-button">Start Quiz</button>
-      <div class="timer">60</div>
-    </div>
+      <div class="highscores"> <a href="./index.html">Main page</a> </div>
+      </div>
   </header>
-  <section class="display-section">
-    <p class="question-box">Click on the start button when you are ready to test your knowledge.</p>
-    <ul class="answer-box">
+
+  <section class="high-display">
+    <ul class="high-box">
+      
     </ul>
-    </section>
-    
+  </section>
+
   <footer>
     <!--<h2>Powered by Jeremy🦈</h2>
     <p>
@@ -34,5 +33,6 @@
 
   </footer>
   <script src="./assets/js/script.js"></script>
+  
 </body>
 </html>
