adding second js file. highscore html set up

--- a/highscores.html
+++ b/highscores.html
@@ -17,9 +17,9 @@
   </header>
 
   <section class="high-display">
-    <ul class="high-box">
+    <ol class="high-box">
       
-    </ul>
+    </ol>
   </section>
 
   <footer>
@@ -32,7 +32,7 @@
     </p>-->
 
   </footer>
-  <script src="./assets/js/script.js"></script>
+  <script src="./assets/js/highscores.js"></script>
   
 </body>
 </html>
