Finishing CSS. Adding clear highscore feature

--- a/highscores.html
+++ b/highscores.html
@@ -13,26 +13,21 @@
     <h1>Welcome to CodeQuiz - Highscores</h1>
     <div class="menubar"> 
       <div class="highscores"> <a href="./index.html">Main page</a> </div>
-      </div>
+    </div>
   </header>
-
   <section class="high-display">
     <ol class="high-box">
-      
     </ol>
   </section>
-
   <footer>
-    <!--<h2>Powered by Jeremy🦈</h2>
+    <h2>Powered by Jeremy🦈</h2>
     <p>
         &copy; 2023 Gator inc. V1.0
     </p>
     <p>
       See more of my work <a href="https://gator2-0.github.io/Jeremy-portfolio/" target="_blank">here</a>
-    </p>-->
-
+    </p>
   </footer>
   <script src="./assets/js/highscores.js"></script>
-  
 </body>
 </html>
