--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     </section>
     
   <footer>
-    <!--<h2>Powered by Jeremy🦈</h2>
+    <h2>Powered by Jeremy🦈</h2>
     <p>
         &copy; 2023 Gator inc. V1.0
     </p>
     <p>
       See more of my work <a href="https://gator2-0.github.io/Jeremy-portfolio/" target="_blank">here</a>
-    </p>-->
+    </p>
 
   </footer>
   <script src="./assets/js/script.js"></script>
